ionos_sbx/mail-relay-zammad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mail-relay
  namespace: zammad
  labels:
    app: mail-relay
spec:
  selector:
    app: mail-relay
  ports:
    - name: submission
      port: 587
      targetPort: 587
